# lab5-8

./: pyproject.toml
lab5/: enter_data.html  lab1.html  script.js  style.css  styles_enter.css
lab6/: app.py  data.json
lab6/static/: script.js  style.css
lab6/templates/: main.jinja2  sell_items.jinja2  table_lr8.html
